Add UDE tutorial

--- a/notebooks/compressor.ipynb
+++ b/notebooks/compressor.ipynb
@@ -5,8 +5,18 @@
    "id": "d635f0f8",
    "metadata": {},
    "source": [
-    "# PolynomialCompressor class"
+    "# PolynomialCompressor class\n",
+    "\n",
+    "- Off-the-shelf compressors for refrigeration machines or heat pumps\n",
+    "- Use datasheet to compute polynomials for isentropic and volumetric efficiency\n",
+    "  as function of evaporation and condensation temperature (DIN EN12900)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43ef4296",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
