Update all notebooks

--- a/notebooks/compressor.ipynb
+++ b/notebooks/compressor.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "199533b9",
    "metadata": {},
    "outputs": [],
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e6339f8c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 50 Hz\n",
     "power = pd.DataFrame(columns=[10,7.5,5,0,-5,-10], index=[30, 40, 50], dtype=float)\n",
     "cooling = power.copy()\n",
     "\n",
@@ -51,7 +52,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
+   "id": "bf477bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 3.43412278e-03, -3.75380537e-02,  4.38171871e-02, -9.22215138e-04,\n",
+       "         1.68048644e-03, -8.88186944e-04, -7.56880279e-06,  1.60832259e-05,\n",
+       "        -1.52699352e-05,  4.96863559e-06]),\n",
+       " array([ 5.81013643e-03, -7.80317410e-04,  7.41237123e-02,  2.76836447e-05,\n",
+       "         6.18407793e-05, -1.88935402e-03,  7.89233342e-07, -1.94914508e-06,\n",
+       "         5.08103608e-07,  1.50773205e-05]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_eta_polys_from_data(\n",
+    "    power, cooling, \"R134a\",\n",
+    "    reference_state={\"T_sh\": 10, \"T_sc\": 0, \"rpm_poly\": 50 * 60, \"rpm_displacement\": 20 * 60, \"displacement\": 214}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa879585",
+   "metadata": {},
+   "source": [
+    "# Workflow\n",
+    "\n",
+    "- Berechnung der Polynome bei unterschiedlichen Drehzahlen\n",
+    "- Dem Kompressor die unterschiedlichen Polynome vorgeben\n",
+    "- Bei vorgegebener Drehzahl: Interpolieren der Polynomkoeffizienten im preprocessing\n",
+    "- Bei nicht vorgegebener Drehzahl: Interpolieren in den Iterationen\n",
+    "\n",
+    "- Vorgehensweise: Vorgabe der polynome pro RPM\n",
+    "- PolynomialCompressorWithRPMInterpolation\n",
+    "- Idee: Auslegungssoftware Bitzer nutzen und displacement bei unterschiedlichen RPM testen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "785c8915",
    "metadata": {},
    "outputs": [],
@@ -77,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "5f148979",
    "metadata": {},
    "outputs": [],
@@ -92,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "16c1313a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7869e0a14a50>"
+       "<matplotlib.colorbar.Colorbar at 0x76e0bbef7b60>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -130,17 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "4bed87cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7869e00f9090>"
+       "<matplotlib.colorbar.Colorbar at 0x76e0b9bd6490>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "b148e44c",
    "metadata": {},
    "outputs": [],
@@ -188,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "574066af",
    "metadata": {},
    "outputs": [],
@@ -215,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "bf32d121",
    "metadata": {},
    "outputs": [],
@@ -226,20 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "4eced168",
    "metadata": {},
    "outputs": [],
    "source": [
     "reference_state={\"T_sh\": 10, \"T_sc\": 0, \"rpm_poly\": 50 * 60, \"rpm_displacement\": 20 * 60, \"displacement\": 214}\n",
     "compressor.set_attr(\n",
-    "    Q_diss_rel=0.2, eta_s_poly=eta_s_poly, eta_vol_poly=eta_vol_poly, reference_state=reference_state, rpm=3000\n",
+    "    dissipation_ratio=0.1, eta_s_poly=eta_s_poly, eta_vol_poly=eta_vol_poly, reference_state=reference_state, rpm=3000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "22e98622",
    "metadata": {},
    "outputs": [
@@ -250,22 +297,33 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 9.55e+05   | 0 %        | 2.78e-01   | 0.00e+00   | 5.42e+05   | 0.00e+00   | 2.87e+05   \n",
-      " 2     | 1.88e+05   | 8 %        | 3.06e-14   | 0.00e+00   | 5.39e-03   | 0.00e+00   | 1.88e+05   \n",
-      " 3     | 8.94e-03   | 89 %       | 0.00e+00   | 0.00e+00   | 4.22e-11   | 0.00e+00   | 8.94e-03   \n",
-      " 4     | 2.33e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 1.06e-11   | 0.00e+00   | 2.14e-10   \n",
-      " 5     | 7.28e-12   | 100 %      | 0.00e+00   | 0.00e+00   | 1.06e-11   | 0.00e+00   | 1.93e-11   \n",
-      "Total iterations: 5, Calculation time: 0.00 s, Iterations per second: 1659.93\n"
+      " 1     | 8.96e+05   | 0 %        | 1.99e-01   | 0.00e+00   | 5.35e+05   | 0.00e+00   | 2.17e+05   \n",
+      " 2     | 1.18e+05   | 10 %       | 2.20e-14   | 0.00e+00   | 8.15e-03   | 0.00e+00   | 1.18e+05   \n",
+      " 3     | 5.61e-03   | 91 %       | 0.00e+00   | 0.00e+00   | 8.31e-11   | 0.00e+00   | 5.61e-03   \n",
+      " 4     | 8.85e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.38e-11   | 0.00e+00   | 1.26e-10   \n",
+      " 5     | 6.00e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.38e-11   | 0.00e+00   | 1.97e-11   \n",
+      "Total iterations: 5, Calculation time: 0.02 s, Iterations per second: 317.85\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-9830.84546806816"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nw.solve(\"design\")"
+    "nw.solve(\"design\")\n",
+    "compressor.Q_diss.val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "83072819",
    "metadata": {},
    "outputs": [
@@ -337,7 +395,7 @@
        "50  0.003840 -0.053774 -0.070377  0.107117  0.212492 -0.204725"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "f4940cfe",
    "metadata": {},
    "outputs": [
@@ -400,30 +458,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>46.581287</td>\n",
-       "      <td>46.683071</td>\n",
-       "      <td>46.941834</td>\n",
-       "      <td>48.032282</td>\n",
-       "      <td>50.079956</td>\n",
-       "      <td>53.346902</td>\n",
+       "      <td>48.841028</td>\n",
+       "      <td>49.144063</td>\n",
+       "      <td>49.626005</td>\n",
+       "      <td>51.241626</td>\n",
+       "      <td>53.943817</td>\n",
+       "      <td>58.025999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
-       "      <td>56.140556</td>\n",
-       "      <td>56.668251</td>\n",
-       "      <td>57.422906</td>\n",
-       "      <td>59.738241</td>\n",
-       "      <td>63.363695</td>\n",
-       "      <td>68.584434</td>\n",
+       "      <td>58.900507</td>\n",
+       "      <td>59.676947</td>\n",
+       "      <td>60.712218</td>\n",
+       "      <td>63.700583</td>\n",
+       "      <td>68.176985</td>\n",
+       "      <td>74.457680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>67.987833</td>\n",
-       "      <td>69.166529</td>\n",
-       "      <td>70.657461</td>\n",
-       "      <td>74.724431</td>\n",
-       "      <td>80.463140</td>\n",
-       "      <td>87.988376</td>\n",
+       "      <td>71.438609</td>\n",
+       "      <td>72.948160</td>\n",
+       "      <td>74.814287</td>\n",
+       "      <td>79.782645</td>\n",
+       "      <td>86.647262</td>\n",
+       "      <td>95.524375</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -431,12 +489,12 @@
       ],
       "text/plain": [
        "         10.0       7.5        5.0        0.0       -5.0       -10.0\n",
-       "30  46.581287  46.683071  46.941834  48.032282  50.079956  53.346902\n",
-       "40  56.140556  56.668251  57.422906  59.738241  63.363695  68.584434\n",
-       "50  67.987833  69.166529  70.657461  74.724431  80.463140  87.988376"
+       "30  48.841028  49.144063  49.626005  51.241626  53.943817  58.025999\n",
+       "40  58.900507  59.676947  60.712218  63.700583  68.176985  74.457680\n",
+       "50  71.438609  72.948160  74.814287  79.782645  86.647262  95.524375"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7544c0f1",
    "metadata": {},
    "outputs": [
@@ -519,14 +577,14 @@
        "50  74.918014  76.760975  79.004469  84.876177  92.862844  103.078722"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "compressor.set_attr(\n",
-    "    Q_diss_rel=0.0\n",
+    "    dissipation_ratio=0.0\n",
     ")\n",
     "\n",
     "for t_evap, t_cond in itertools.product(power.columns, power.index):\n",
