--- a/notebooks/introductory_heatexchanger.ipynb
+++ b/notebooks/introductory_heatexchanger.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e5b91a08",
+   "metadata": {},
+   "source": [
+    "# Introductory tutorial\n",
+    "\n",
+    "- simple heat exchanger design state calculations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "id": "827e71df",
