--- a/notebooks/introductory_postprocessing.ipynb
+++ b/notebooks/introductory_postprocessing.ipynb
@@ -5,7 +5,12 @@
    "id": "35619256",
    "metadata": {},
    "source": [
-    "# Introductory tutorial"
+    "# Introductory tutorial\n",
+    "\n",
+    "- Show some postprocessing options\n",
+    "- ORC power system with recuperator\n",
+    "- Plot Ts diagram with fluprodia\n",
+    "- Run exergy anaysis with exerpy"
    ]
   },
   {
@@ -502,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
