--- a/notebooks/introductory_turbine.ipynb
+++ b/notebooks/introductory_turbine.ipynb
@@ -7,44 +7,12 @@
    "source": [
     "# Introductory tutorial\n",
     "\n",
-    "## tespy overview\n",
-    "\n",
-    "- system of equations to describe fluid state in model\n",
-    "- solve for\n",
-    "  - material flows: mass flow, pressure, enthalpy of each connection point\n",
-    "    between two components\n",
-    "  - non-material flows (power,heat): energy flow of each connection point\n",
-    "    between two components\n",
-    "  - component variables: specific components can have variables, e.g.\n",
-    "    compressor RPM, pipe diameter\n",
-    "- equation based solver: specifications can be swapped, no change to model or\n",
-    "  solving procedure required\n",
-    "- offdesign simulation: functions to make relation between actual state and \n",
-    "  design state of the system\n",
-    "- inject user defined equations into the solver\n",
-    "\n",
-    "## topics\n",
-    "\n",
-    "- structure of models\n",
-    "- set up a simple model\n",
-    "- make specifications to the model and solve it\n",
-    "- retrieve results from the model\n",
-    "- postprocessings: cycle diagrams and exergy analysis\n",
-    "\n",
-    "## structure of models\n",
-    "\n",
-    "- Network\n",
-    "- Components\n",
-    "- Connections/PowerConnections/(HeatConnections)\n",
-    "- UserDefinedEquations\n",
-    "- FluidPropertyWrappers\n",
-    "\n",
-    "### Network"
+    "- turbine design and offdesign performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ee89e97a",
    "metadata": {},
    "outputs": [
@@ -63,58 +31,12 @@
     "from tespy.networks import Network\n",
     "\n",
     "\n",
-    "nw = Network()  # sometimes you'll see Network(fluids=[...]), that is long outdated, ChatGPT?\n",
-    "nw"
+    "nw = Network()  # sometimes you'll see Network(fluids=[...]), that is long outdated, ChatGPT?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5c32f1fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Network Units\n",
-       "-------------\n",
-       "Quantity                  | Unit      \n",
-       "--------------------------+-----------\n",
-       "temperature               | kelvin    \n",
-       "temperature_difference    | delta_degC\n",
-       "enthalpy                  | J/kg      \n",
-       "specific_energy           | J/kg      \n",
-       "entropy                   | J/kg/K    \n",
-       "pressure                  | Pa        \n",
-       "mass_flow                 | kg/s      \n",
-       "volumetric_flow           | m3/s      \n",
-       "specific_volume           | m3/kg     \n",
-       "power                     | W         \n",
-       "heat                      | W         \n",
-       "quality                   | 1         \n",
-       "vapor_mass_fraction       | 1         \n",
-       "efficiency                | 1         \n",
-       "ratio                     | 1         \n",
-       "length                    | m         \n",
-       "speed                     | m/s       \n",
-       "area                      | m2        \n",
-       "thermal_conductivity      | W/m/K     \n",
-       "heat_transfer_coefficient | W/K       \n",
-       "not specified             | 1         "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nw.units"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e72d14cc",
    "metadata": {},
    "outputs": [
@@ -158,8 +80,7 @@
     "    temperature=\"°C\",\n",
     "    pressure=\"bar\",\n",
     "    power=\"kW\"\n",
-    ")\n",
-    "nw.units"
+    ")"
    ]
   },
   {
