--- a/notebooks/userdefinedeq_minimal_pinch.ipynb
+++ b/notebooks/userdefinedeq_minimal_pinch.ipynb
@@ -10,6 +10,7 @@
     "Examples:\n",
     "\n",
     "- find value of evaporation temperature to achieve specific COP\n",
+    "- a custom superheat specification\n",
     "- set the minimal pinch across a number of heat exchangers\n",
     "\n",
     "## General info\n",
@@ -24,220 +25,16 @@
     "  - other parameters (dictionary) available through ude.params\n",
     "- For more, readthedocs: https://tespy.readthedocs.io/en/main/modules/ude.html\n",
     "\n",
-    "## Specification of COP\n",
+    "## Minimal pinch across heat exchangers\n",
     "\n",
-    "- heat pump\n",
-    "- fixed efficiency of compressor\n",
-    "- fixed superheat and subcooling\n",
-    "- fixed evaporation and condensation temperature level\n",
-    "- target amount of heat production by condenser"
+    "- three heat exchangers in line with evaporation of working fluid\n",
+    "- not clear, where minimal pinch is: evaporator inflow or superheater outflow\n",
+    "- "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2f756df",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:30.920881Z",
-     "iopub.status.busy": "2025-10-09T18:03:30.920372Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.464148Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.463226Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from tespy.components import SimpleHeatExchanger, CycleCloser, Valve, Compressor\n",
-    "from tespy.connections import Connection\n",
-    "from tespy.networks import Network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "db7b48d2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.467387Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.467077Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.494220Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.493497Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "nw = Network()\n",
-    "nw.units.set_defaults(\n",
-    "    temperature=\"°C\",\n",
-    "    pressure=\"bar\",\n",
-    "    power=\"kW\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "12dfc81a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.496922Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.496702Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.512661Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.511821Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "evaporator = SimpleHeatExchanger(\"evaporator\")\n",
-    "compressor = Compressor(\"compressor\")\n",
-    "condenser = SimpleHeatExchanger(\"condenser\")\n",
-    "valve = Valve(\"valve\")\n",
-    "cc = CycleCloser(\"cc\")\n",
-    "\n",
-    "c1 = Connection(evaporator, \"out1\", compressor, \"in1\", label=\"c1\")\n",
-    "c2 = Connection(compressor, \"out1\", condenser, \"in1\", label=\"c2\")\n",
-    "c3 = Connection(condenser, \"out1\", valve, \"in1\", label=\"c3\")\n",
-    "c4 = Connection(valve, \"out1\", cc, \"in1\", label=\"c4\")\n",
-    "c5 = Connection(cc, \"out1\", evaporator, \"in1\", label=\"c5\")\n",
-    "\n",
-    "nw.add_conns(c1, c2, c3, c4, c5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c2722a1b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.514824Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.514622Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.590061Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.588963Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
-      "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 6.10e+05   | 2 %        | 1.78e+00   | 0.00e+00   | 6.39e+03   | 0.00e+00   | 0.00e+00   \n",
-      " 2     | 1.14e+04   | 21 %       | 3.19e-02   | 0.00e+00   | 1.18e-10   | 0.00e+00   | 0.00e+00   \n",
-      " 3     | 1.48e-10   | 100 %      | 3.20e-16   | 0.00e+00   | 1.18e-10   | 0.00e+00   | 0.00e+00   \n",
-      " 4     | 9.46e-11   | 100 %      | 1.35e-20   | 0.00e+00   | 1.18e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 3323.54\n"
-     ]
-    }
-   ],
-   "source": [
-    "c1.set_attr(fluid={\"R600\": 1}, T_dew=10, td_dew=10)\n",
-    "c3.set_attr(T_bubble=60, td_bubble=5)\n",
-    "\n",
-    "evaporator.set_attr(dp=0)\n",
-    "condenser.set_attr(dp=0, Q=-100)\n",
-    "compressor.set_attr(eta_s=0.8)\n",
-    "\n",
-    "nw.solve(\"design\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "551fada5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.592242Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.592043Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.646377Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.645576Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
-      "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 2.41e-01   | 73 %       | 4.25e-07   | 1.17e+04   | 3.41e+03   | 0.00e+00   | 0.00e+00   \n",
-      " 2     | 1.26e+02   | 43 %       | 3.98e-08   | 1.86e+02   | 1.56e+02   | 0.00e+00   | 0.00e+00   \n",
-      " 3     | 1.52e-02   | 86 %       | 5.56e-11   | 1.69e+00   | 4.70e-01   | 0.00e+00   | 0.00e+00   \n",
-      " 4     | 1.47e-06   | 100 %      | 2.53e-16   | 8.05e-06   | 3.75e-06   | 0.00e+00   | 0.00e+00   \n",
-      " 5     | 5.82e-10   | 100 %      | 6.54e-19   | 1.88e-09   | 5.24e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 5, Calculation time: 0.00 s, Iterations per second: 1164.63\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tespy.tools import UserDefinedEquation\n",
-    "\n",
-    "\n",
-    "c1.set_attr(T_dew=None)\n",
-    "\n",
-    "def cop_ude(ude):\n",
-    "    c1, c2, c3 = ude.conns\n",
-    "    target_cop = ude.params[\"target_cop\"]\n",
-    "    return target_cop - (c2.h.val_SI - c3.h.val_SI) / (c2.h.val_SI - c1.h.val_SI)\n",
-    "\n",
-    "def cop_ude_dependents(ude):\n",
-    "    return [c.h for c in ude.conns]\n",
-    "\n",
-    "cop = 5\n",
-    "\n",
-    "myude = UserDefinedEquation(\n",
-    "    \"cop ude\",\n",
-    "    cop_ude,\n",
-    "    cop_ude_dependents,\n",
-    "    conns=[c1, c2, c3],\n",
-    "    params={\"target_cop\": cop}\n",
-    ")\n",
-    "\n",
-    "nw.add_ude(myude)\n",
-    "nw.solve(\"design\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3307ec93",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.649305Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.649071Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.658454Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.657170Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22.16262950447009"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c1.T.val"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98403a8a",
-   "metadata": {},
-   "source": [
-    "## Minimal pinch across heat exchangers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "f3757bb0",
    "metadata": {
     "execution": {
@@ -250,6 +47,8 @@
    "outputs": [],
    "source": [
     "from tespy.components import HeatExchanger, Source, Sink\n",
+    "from tespy.connections import Connection\n",
+    "from tespy.networks import Network\n",
     "\n",
     "\n",
     "nw = Network()\n",
@@ -262,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e4d2bc42",
    "metadata": {
     "execution": {
@@ -299,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "be49d5ab",
    "metadata": {
     "execution": {
@@ -317,11 +116,11 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 2.25e+06   | 0 %        | 1.35e+00   | 0.00e+00   | 4.31e+05   | 0.00e+00   | 0.00e+00   \n",
-      " 2     | 3.25e-02   | 83 %       | 6.68e-08   | 0.00e+00   | 4.86e-03   | 0.00e+00   | 0.00e+00   \n",
+      " 1     | 2.24e+06   | 0 %        | 1.23e+00   | 0.00e+00   | 4.31e+05   | 0.00e+00   | 0.00e+00   \n",
+      " 2     | 3.25e-02   | 83 %       | 6.84e-08   | 0.00e+00   | 4.82e-03   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 2.06e-09   | 100 %      | 4.42e-17   | 0.00e+00   | 2.59e-10   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 1.81e-09   | 100 %      | 4.42e-17   | 0.00e+00   | 2.49e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 1521.74\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 864.94\n"
      ]
     }
    ],
@@ -343,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "90b985f4",
    "metadata": {
     "execution": {
@@ -367,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a992bfa5",
    "metadata": {
     "execution": {
@@ -392,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "ad8c568d",
    "metadata": {
     "execution": {
@@ -440,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "0319e608",
    "metadata": {
     "execution": {
@@ -461,9 +260,9 @@
       " 1     | 5.00e+00   | 58 %       | 9.60e-03   | 7.78e+04   | 1.83e+04   | 0.00e+00   | 0.00e+00   \n",
       " 2     | 3.92e+02   | 37 %       | 1.76e-04   | 3.15e+03   | 5.98e+02   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 2.91e-01   | 72 %       | 1.63e-07   | 4.61e+00   | 8.87e-01   | 0.00e+00   | 0.00e+00   \n",
-      " 4     | 6.88e-07   | 100 %      | 5.87e-13   | 6.77e-06   | 1.44e-06   | 0.00e+00   | 0.00e+00   \n",
-      " 5     | 2.63e-09   | 100 %      | 5.94e-16   | 9.57e-10   | 5.94e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 5, Calculation time: 0.02 s, Iterations per second: 234.89\n"
+      " 4     | 6.93e-07   | 100 %      | 9.71e-13   | 2.39e-05   | 4.65e-06   | 0.00e+00   | 0.00e+00   \n",
+      " 5     | 2.86e-09   | 100 %      | 1.53e-16   | 5.74e-09   | 1.32e-09   | 0.00e+00   | 0.00e+00   \n",
+      "Total iterations: 5, Calculation time: 0.08 s, Iterations per second: 64.54\n"
      ]
     }
    ],
@@ -516,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "357cbea8",
    "metadata": {
     "execution": {
@@ -562,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "d60eab26",
    "metadata": {
     "execution": {
@@ -610,14 +409,6 @@
     "    for label, point in data.items():\n",
     "        _ = ax.scatter(point[\"s\"], point[\"T\"], label=label, color=\"tab:blue\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1e0a30a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
