Execute all notebooks to render results

--- a/notebooks/compressor.ipynb
+++ b/notebooks/compressor.ipynb
@@ -18,7 +18,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "199533b9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:48.534943Z",
+     "iopub.status.busy": "2025-10-15T15:09:48.534670Z",
+     "iopub.status.idle": "2025-10-15T15:09:50.821201Z",
+     "shell.execute_reply": "2025-10-15T15:09:50.820334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -31,7 +38,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e6339f8c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:50.823794Z",
+     "iopub.status.busy": "2025-10-15T15:09:50.823474Z",
+     "iopub.status.idle": "2025-10-15T15:09:50.830996Z",
+     "shell.execute_reply": "2025-10-15T15:09:50.830289Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 50 Hz\n",
@@ -54,7 +68,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "bf477bbc",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:50.833034Z",
+     "iopub.status.busy": "2025-10-15T15:09:50.832795Z",
+     "iopub.status.idle": "2025-10-15T15:09:50.849581Z",
+     "shell.execute_reply": "2025-10-15T15:09:50.848912Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -100,7 +121,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "785c8915",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:50.851520Z",
+     "iopub.status.busy": "2025-10-15T15:09:50.851333Z",
+     "iopub.status.idle": "2025-10-15T15:09:50.874075Z",
+     "shell.execute_reply": "2025-10-15T15:09:50.873428Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# variant 1\n",
@@ -126,7 +154,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5f148979",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:50.876189Z",
+     "iopub.status.busy": "2025-10-15T15:09:50.876005Z",
+     "iopub.status.idle": "2025-10-15T15:09:50.879735Z",
+     "shell.execute_reply": "2025-10-15T15:09:50.879333Z"
+    }
+   },
    "outputs": [],
    "source": [
     "T_cond = np.linspace(30, 50)\n",
@@ -141,12 +176,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "16c1313a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:50.881542Z",
+     "iopub.status.busy": "2025-10-15T15:09:50.881375Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.165606Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.164874Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x76e0bbef7b60>"
+       "<matplotlib.colorbar.Colorbar at 0x763f19f30050>"
       ]
      },
      "execution_count": 6,
@@ -179,12 +221,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "4bed87cf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.167584Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.167409Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.412992Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.412554Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x76e0b9bd6490>"
+       "<matplotlib.colorbar.Colorbar at 0x763f19e5a350>"
       ]
      },
      "execution_count": 7,
@@ -225,7 +274,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "b148e44c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.415476Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.415277Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.418088Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.417576Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.components import Source, Sink, PolynomialCompressor, PowerSource\n",
@@ -237,7 +293,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "574066af",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.420409Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.420235Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.453040Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.452483Z"
+    }
+   },
    "outputs": [],
    "source": [
     "nw = Network()\n",
@@ -264,7 +327,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "bf32d121",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.455795Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.455604Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.458366Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.457879Z"
+    }
+   },
    "outputs": [],
    "source": [
     "c1.set_attr(fluid={\"R134a\": 1}, td_dew=10, T_dew=-5)\n",
@@ -275,7 +345,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "4eced168",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.460750Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.460579Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.463374Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.462954Z"
+    }
+   },
    "outputs": [],
    "source": [
     "reference_state={\"T_sh\": 10, \"T_sc\": 0, \"rpm_poly\": 50 * 60, \"rpm_displacement\": 20 * 60, \"displacement\": 214}\n",
@@ -288,7 +365,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "22e98622",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.465347Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.465183Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.504689Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.504210Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -297,12 +381,12 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 8.96e+05   | 0 %        | 1.99e-01   | 0.00e+00   | 5.35e+05   | 0.00e+00   | 2.17e+05   \n",
-      " 2     | 1.18e+05   | 10 %       | 2.20e-14   | 0.00e+00   | 8.15e-03   | 0.00e+00   | 1.18e+05   \n",
-      " 3     | 5.61e-03   | 91 %       | 0.00e+00   | 0.00e+00   | 8.31e-11   | 0.00e+00   | 5.61e-03   \n",
-      " 4     | 8.85e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.38e-11   | 0.00e+00   | 1.26e-10   \n",
+      " 1     | 1.17e+06   | 0 %        | 2.31e-01   | 0.00e+00   | 5.35e+05   | 0.00e+00   | 3.92e+04   \n",
+      " 2     | 1.38e+05   | 9 %        | 2.55e-14   | 0.00e+00   | 8.15e-03   | 0.00e+00   | 1.38e+05   \n",
+      " 3     | 6.53e-03   | 90 %       | 0.00e+00   | 0.00e+00   | 8.31e-11   | 0.00e+00   | 6.53e-03   \n",
+      " 4     | 2.19e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 2.38e-11   | 0.00e+00   | 1.80e-10   \n",
       " 5     | 6.00e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.38e-11   | 0.00e+00   | 1.97e-11   \n",
-      "Total iterations: 5, Calculation time: 0.02 s, Iterations per second: 317.85\n"
+      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 921.70\n"
      ]
     },
     {
@@ -325,7 +409,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "83072819",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.507140Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.506946Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.777984Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.777524Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -424,7 +515,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "f4940cfe",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.780442Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.780256Z",
+     "iopub.status.idle": "2025-10-15T15:09:51.788257Z",
+     "shell.execute_reply": "2025-10-15T15:09:51.787607Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -507,7 +605,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "7544c0f1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:09:51.790136Z",
+     "iopub.status.busy": "2025-10-15T15:09:51.789963Z",
+     "iopub.status.idle": "2025-10-15T15:09:52.054336Z",
+     "shell.execute_reply": "2025-10-15T15:09:52.053861Z"
+    }
+   },
    "outputs": [
     {
      "data": {
