--- a/notebooks/heatexchanger_offdesign_characteristics.ipynb
+++ b/notebooks/heatexchanger_offdesign_characteristics.ipynb
@@ -28,7 +28,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6e264a5a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:10.746593Z",
+     "iopub.status.busy": "2025-10-15T15:10:10.746330Z",
+     "iopub.status.idle": "2025-10-15T15:10:12.549117Z",
+     "shell.execute_reply": "2025-10-15T15:10:12.548435Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.tools import load_default_char\n",
@@ -43,7 +50,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "4607a8be",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:12.552355Z",
+     "iopub.status.busy": "2025-10-15T15:10:12.552035Z",
+     "iopub.status.idle": "2025-10-15T15:10:12.868398Z",
+     "shell.execute_reply": "2025-10-15T15:10:12.867901Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -68,7 +82,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3a70f903",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:12.871326Z",
+     "iopub.status.busy": "2025-10-15T15:10:12.871020Z",
+     "iopub.status.idle": "2025-10-15T15:10:13.245309Z",
+     "shell.execute_reply": "2025-10-15T15:10:13.244863Z"
+    }
+   },
    "outputs": [
     {
      "data": {
