--- a/notebooks/introductory_postprocessing.ipynb
+++ b/notebooks/introductory_postprocessing.ipynb
@@ -17,7 +17,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "98fb8652",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:57.242072Z",
+     "iopub.status.busy": "2025-10-15T15:10:57.241836Z",
+     "iopub.status.idle": "2025-10-15T15:10:59.069856Z",
+     "shell.execute_reply": "2025-10-15T15:10:59.069071Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.components import MovingBoundaryHeatExchanger, CycleCloser, Pump, Motor, PowerBus, Turbine, Source, Sink, Generator, PowerSink\n",
@@ -38,7 +45,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e120708e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:59.072909Z",
+     "iopub.status.busy": "2025-10-15T15:10:59.072647Z",
+     "iopub.status.idle": "2025-10-15T15:10:59.077659Z",
+     "shell.execute_reply": "2025-10-15T15:10:59.076951Z"
+    }
+   },
    "outputs": [],
    "source": [
     "turbine = Turbine(\"turbine\")\n",
@@ -60,7 +74,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "72bfd669",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:59.079754Z",
+     "iopub.status.busy": "2025-10-15T15:10:59.079578Z",
+     "iopub.status.idle": "2025-10-15T15:10:59.114194Z",
+     "shell.execute_reply": "2025-10-15T15:10:59.113702Z"
+    }
+   },
    "outputs": [],
    "source": [
     "a1 = Connection(geo_source, \"out1\", evaporator, \"in1\", label=\"a1\")\n",
@@ -102,7 +123,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "93e6bbf8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:59.116317Z",
+     "iopub.status.busy": "2025-10-15T15:10:59.116143Z",
+     "iopub.status.idle": "2025-10-15T15:10:59.120283Z",
+     "shell.execute_reply": "2025-10-15T15:10:59.119711Z"
+    }
+   },
    "outputs": [],
    "source": [
     "a1.set_attr(fluid={\"water\": 1}, T=200, p=35, m=10)\n",
@@ -130,7 +158,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "1a03e17f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:59.122224Z",
+     "iopub.status.busy": "2025-10-15T15:10:59.122067Z",
+     "iopub.status.idle": "2025-10-15T15:10:59.452075Z",
+     "shell.execute_reply": "2025-10-15T15:10:59.451452Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,12 +174,12 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 1.97e+06   | 0 %        | 3.59e+02   | 0.00e+00   | 6.42e+05   | 0.00e+00   | 2.20e+06   \n",
-      " 2     | 5.69e+06   | 0 %        | 3.86e-09   | 0.00e+00   | 4.52e+05   | 0.00e+00   | 1.25e+06   \n",
-      " 3     | 5.11e-01   | 69 %       | 4.63e-14   | 0.00e+00   | 2.29e-02   | 0.00e+00   | 3.85e-01   \n",
-      " 4     | 1.84e-07   | 100 %      | 4.63e-14   | 0.00e+00   | 4.77e-10   | 0.00e+00   | 1.80e-07   \n",
-      " 5     | 6.38e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 3.71e-11   | 0.00e+00   | 2.52e-10   \n",
-      "Total iterations: 5, Calculation time: 0.02 s, Iterations per second: 249.97\n",
+      " 1     | 2.10e+06   | 0 %        | 3.59e+02   | 0.00e+00   | 1.21e+06   | 0.00e+00   | 2.33e+06   \n",
+      " 2     | 5.64e+06   | 0 %        | 4.22e-09   | 0.00e+00   | 4.55e+05   | 0.00e+00   | 1.39e+06   \n",
+      " 3     | 6.68e-01   | 68 %       | 9.26e-14   | 0.00e+00   | 4.69e-02   | 0.00e+00   | 9.03e-01   \n",
+      " 4     | 3.58e-07   | 100 %      | 4.63e-14   | 0.00e+00   | 7.58e-10   | 0.00e+00   | 3.67e-07   \n",
+      " 5     | 4.20e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 5.02e-11   | 0.00e+00   | 3.16e-10   \n",
+      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 409.08\n",
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
@@ -153,7 +188,13 @@
       " 3     | 3.00e+00   | 61 %       | 4.16e-04   | 7.40e+00   | 6.73e-01   | 0.00e+00   | 7.57e+00   \n",
       " 4     | 9.56e-05   | 100 %      | 1.11e-08   | 2.36e-04   | 2.11e-05   | 0.00e+00   | 2.07e-04   \n",
       " 5     | 1.04e-08   | 100 %      | 2.77e-12   | 3.48e-10   | 3.49e-09   | 0.00e+00   | 7.37e-09   \n",
-      "Total iterations: 5, Calculation time: 0.14 s, Iterations per second: 35.62\n",
+      "Total iterations: 5, Calculation time: 0.04 s, Iterations per second: 125.17\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "##### RESULTS (CycleCloser) #####\n",
       "+----+------------------+-------------------+\n",
@@ -243,7 +284,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "93572653",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:59.454325Z",
+     "iopub.status.busy": "2025-10-15T15:10:59.454141Z",
+     "iopub.status.idle": "2025-10-15T15:11:00.003804Z",
+     "shell.execute_reply": "2025-10-15T15:11:00.002930Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from fluprodia import FluidPropertyDiagram\n",
@@ -261,7 +309,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e060e97c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:00.006701Z",
+     "iopub.status.busy": "2025-10-15T15:11:00.006319Z",
+     "iopub.status.idle": "2025-10-15T15:11:00.022878Z",
+     "shell.execute_reply": "2025-10-15T15:11:00.022196Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.tools import get_plotting_data\n",
@@ -279,7 +334,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e3c4a81b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:00.025501Z",
+     "iopub.status.busy": "2025-10-15T15:11:00.025308Z",
+     "iopub.status.idle": "2025-10-15T15:11:00.567014Z",
+     "shell.execute_reply": "2025-10-15T15:11:00.566311Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -329,7 +391,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "65abb504",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:00.569610Z",
+     "iopub.status.busy": "2025-10-15T15:11:00.569368Z",
+     "iopub.status.idle": "2025-10-15T15:11:00.608511Z",
+     "shell.execute_reply": "2025-10-15T15:11:00.607640Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from exerpy import ExergyAnalysis"
@@ -339,16 +408,47 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "9380306d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:00.611645Z",
+     "iopub.status.busy": "2025-10-15T15:11:00.611432Z",
+     "iopub.status.idle": "2025-10-15T15:11:00.662914Z",
+     "shell.execute_reply": "2025-10-15T15:11:00.662108Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Component class Sink not available in exerpy.\n",
-      "Component class Source not available in exerpy.\n",
-      "Component class PowerBus not available in exerpy.\n",
-      "Component class PowerSink not available in exerpy.\n",
+      "Component class Sink not available in exerpy.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Component class Source not available in exerpy.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Component class PowerBus not available in exerpy.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Component class PowerSink not available in exerpy.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "WARNING:root:You haven't provided a chemical exergy library. Chemical exergy values will not be added.\n"
      ]
     },
@@ -507,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
