--- a/notebooks/introductory_turbine.ipynb
+++ b/notebooks/introductory_turbine.ipynb
@@ -12,21 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ee89e97a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tespy.networks.network.Network at 0x71d54991b250>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:45.436785Z",
+     "iopub.status.busy": "2025-10-15T15:10:45.436489Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.266312Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.265759Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from tespy.networks import Network\n",
     "\n",
@@ -36,45 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e72d14cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Network Units\n",
-       "-------------\n",
-       "Quantity                  | Unit      \n",
-       "--------------------------+-----------\n",
-       "temperature               | °C        \n",
-       "temperature_difference    | delta_degC\n",
-       "enthalpy                  | J/kg      \n",
-       "specific_energy           | J/kg      \n",
-       "entropy                   | J/kg/K    \n",
-       "pressure                  | bar       \n",
-       "mass_flow                 | kg/s      \n",
-       "volumetric_flow           | m3/s      \n",
-       "specific_volume           | m3/kg     \n",
-       "power                     | kW        \n",
-       "heat                      | W         \n",
-       "quality                   | 1         \n",
-       "vapor_mass_fraction       | 1         \n",
-       "efficiency                | 1         \n",
-       "ratio                     | 1         \n",
-       "length                    | m         \n",
-       "speed                     | m/s       \n",
-       "area                      | m2        \n",
-       "thermal_conductivity      | W/m/K     \n",
-       "heat_transfer_coefficient | W/K       \n",
-       "not specified             | 1         "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.269134Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.268863Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.272527Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.271861Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "nw.units.set_defaults(\n",
     "    temperature=\"°C\",\n",
@@ -93,9 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b2da872e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.275449Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.275121Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.285417Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.284964Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.components import Turbine, Source, Sink\n",
@@ -114,9 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "828c84ed",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.287861Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.287668Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.290714Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.290134Z"
+    }
+   },
    "outputs": [],
    "source": [
     "c1.set_attr(fluid={\"REFPROP::Pentane[0.9]&IPentane[0.1]|mass\": 1}, T=175, td_dew=50, m=1)\n",
@@ -125,9 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "492aad39",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.292937Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.292758Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.295580Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.294968Z"
+    }
+   },
    "outputs": [],
    "source": [
     "turbine.set_attr(eta_s=0.8)"
@@ -135,9 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "c7daff4d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.297705Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.297512Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.369512Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.368919Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +146,7 @@
       " 2     | 2.91e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.91e-11   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 2.91e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.91e-11   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 2.91e-11   | 100 %      | 0.00e+00   | 0.00e+00   | 2.91e-11   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 912.80\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 954.93\n"
      ]
     }
    ],
@@ -160,9 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "3201aaca",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.371761Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.371537Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.381488Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.381011Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -191,9 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "45c2df69",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.383451Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.383279Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.401982Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.401533Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -317,7 +327,7 @@
        "[2 rows x 24 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,9 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "5c76ca0a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.404260Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.404078Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.410905Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.410394Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -387,7 +404,7 @@
        "turbine  dimensionless  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,9 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "c27189cb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.413238Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.413038Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.420657Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.420148Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tespy.components import Generator, PowerSink\n",
@@ -418,9 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "d23721f2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.423264Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.423057Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.425918Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.425392Z"
+    }
+   },
    "outputs": [],
    "source": [
     "generator.set_attr(eta=0.98)"
@@ -428,9 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "1f00da59",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.428817Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.428525Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.472980Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.472396Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -443,7 +481,7 @@
       " 2     | 4.29e-03   | 92 %       | 0.00e+00   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 4.29e-03   \n",
       " 3     | 3.00e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 1.16e-10   \n",
       " 4     | 2.16e-10   | 100 %      | 0.00e+00   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 1.46e-11   \n",
-      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 447.21\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 957.55\n"
      ]
     }
    ],
@@ -453,9 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "8feac8a5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.475149Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.474975Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.480526Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.480116Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -503,7 +548,7 @@
        "e2  88.463859  kilowatt"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,9 +559,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "dbc6a708",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.482406Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.482244Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.487783Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.487381Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -562,7 +614,7 @@
        "generator  0.98  dimensionless    1.805385         kilowatt"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,9 +625,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "ca9c6d9d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.489753Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.489563Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.514250Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.513752Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -588,7 +647,7 @@
       " 2     | 6.84e-09   | 100 %      | 7.39e-14   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 2.16e-10   | 100 %      | 4.90e-17   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 2.16e-10   | 100 %      | 4.90e-17   | 0.00e+00   | 1.46e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 406.95\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 1024.06\n"
      ]
     }
    ],
@@ -600,9 +659,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "4a65f58d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.516424Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.516243Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.519928Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.519476Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -610,7 +676,7 @@
        "1.1304051237831045"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,9 +687,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "423c62ba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.521846Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.521681Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.525889Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.525444Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -637,7 +710,7 @@
        "<Quantity(1.13040512, 'kilogram / second')>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,9 +721,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "190be4f6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.527879Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.527695Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.573652Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.573189Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -667,7 +747,7 @@
       " 6     | 1.31e-02   | 87 %       | 2.34e-11   | 7.92e-03   | 2.51e-04   | 0.00e+00   | 0.00e+00   \n",
       " 7     | 3.43e-09   | 100 %      | 8.32e-16   | 2.21e-09   | 1.57e-10   | 0.00e+00   | 0.00e+00   \n",
       " 8     | 7.28e-10   | 100 %      | 7.69e-16   | 3.71e-10   | 1.25e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 8, Calculation time: 0.08 s, Iterations per second: 104.71\n"
+      "Total iterations: 8, Calculation time: 0.02 s, Iterations per second: 325.88\n"
      ]
     },
     {
@@ -676,7 +756,7 @@
        "0.2008017376645629"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,9 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "f9042def",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.575763Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.575570Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.608896Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.608411Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -704,7 +791,7 @@
       " 2     | 5.65e-10   | 100 %      | 3.39e-15   | 1.39e-10   | 1.09e-10   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 6.70e-10   | 100 %      | 5.66e-16   | 3.36e-10   | 1.24e-10   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 4.37e-10   | 100 %      | 6.47e-16   | 1.95e-10   | 1.20e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.04 s, Iterations per second: 106.90\n"
+      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 317.93\n"
      ]
     },
     {
@@ -713,7 +800,7 @@
        "0.9615384615384616"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,9 +828,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "21adaa99",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.611227Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.610994Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.646658Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.646176Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -756,7 +850,7 @@
       " 2     | 6.37e+03   | 24 %       | 6.17e-02   | 0.00e+00   | 0.00e+00   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 1.06e-09   | 100 %      | 1.03e-14   | 0.00e+00   | 0.00e+00   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 0.00e+00   | 100 %      | 0.00e+00   | 0.00e+00   | 0.00e+00   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 365.06\n"
+      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 695.72\n"
      ]
     }
    ],
@@ -788,9 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "c125f32e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.648914Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.648712Z",
+     "iopub.status.idle": "2025-10-15T15:10:47.711262Z",
+     "shell.execute_reply": "2025-10-15T15:10:47.710665Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -798,12 +899,18 @@
      "text": [
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
-      "-------+------------+------------+------------+------------+------------+------------+------------\n",
+      "-------+------------+------------+------------+------------+------------+------------+------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " 1     | 3.82e-08   | 100 %      | 1.04e-10   | 3.41e-05   | 1.28e-04   | 0.00e+00   | 0.00e+00   \n",
       " 2     | 8.25e-08   | 100 %      | 6.38e-13   | 6.03e-07   | 5.30e-08   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 5.25e-10   | 100 %      | 5.37e-15   | 5.79e-09   | 3.41e-10   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 4.84e-10   | 100 %      | 5.56e-15   | 4.84e-09   | 2.73e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.05 s, Iterations per second: 85.43\n"
+      "Total iterations: 4, Calculation time: 0.03 s, Iterations per second: 123.51\n"
      ]
     }
    ],
@@ -816,9 +923,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "12b65092",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:47.713779Z",
+     "iopub.status.busy": "2025-10-15T15:10:47.713593Z",
+     "iopub.status.idle": "2025-10-15T15:10:49.978187Z",
+     "shell.execute_reply": "2025-10-15T15:10:49.977500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -841,17 +955,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "86558116",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:10:49.981048Z",
+     "iopub.status.busy": "2025-10-15T15:10:49.980873Z",
+     "iopub.status.idle": "2025-10-15T15:10:50.486001Z",
+     "shell.execute_reply": "2025-10-15T15:10:50.485586Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x71d5463cdbd0>"
+       "<matplotlib.collections.PathCollection at 0x7217adbd2710>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
