--- a/notebooks/userdefinedeq_cop.ipynb
+++ b/notebooks/userdefinedeq_cop.ipynb
@@ -40,10 +40,10 @@
    "id": "c2f756df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:30.920881Z",
-     "iopub.status.busy": "2025-10-09T18:03:30.920372Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.464148Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.463226Z"
+     "iopub.execute_input": "2025-10-15T15:11:24.259860Z",
+     "iopub.status.busy": "2025-10-15T15:11:24.259550Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.076148Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.075257Z"
     }
    },
    "outputs": [],
@@ -59,10 +59,10 @@
    "id": "db7b48d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.467387Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.467077Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.494220Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.493497Z"
+     "iopub.execute_input": "2025-10-15T15:11:26.079079Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.078786Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.103047Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.102310Z"
     }
    },
    "outputs": [],
@@ -82,10 +82,10 @@
    "id": "12dfc81a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.496922Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.496702Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.512661Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.511821Z"
+     "iopub.execute_input": "2025-10-15T15:11:26.105303Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.105124Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.120452Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.119975Z"
     }
    },
    "outputs": [],
@@ -113,10 +113,10 @@
    "id": "c2722a1b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.514824Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.514622Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.590061Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.588963Z"
+     "iopub.execute_input": "2025-10-15T15:11:26.122846Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.122654Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.195360Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.194923Z"
     }
    },
    "outputs": [
@@ -127,11 +127,11 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 3.59e+05   | 4 %        | 1.11e+00   | 0.00e+00   | 2.30e+04   | 0.00e+00   | 0.00e+00   \n",
-      " 2     | 2.56e+04   | 17 %       | 6.88e-02   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
-      " 3     | 2.23e-09   | 100 %      | 5.91e-15   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
+      " 1     | 5.93e+05   | 2 %        | 1.83e+00   | 0.00e+00   | 2.30e+04   | 0.00e+00   | 0.00e+00   \n",
+      " 2     | 4.21e+04   | 15 %       | 1.13e-01   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
+      " 3     | 4.71e-10   | 100 %      | 1.32e-15   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 7.84e-11   | 100 %      | 1.26e-17   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 1296.74\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 1501.59\n"
      ]
     }
    ],
@@ -152,7 +152,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "dab740e5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:26.197629Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.197444Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.202533Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.202157Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -175,10 +182,10 @@
    "id": "551fada5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.592242Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.592043Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.646377Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.645576Z"
+     "iopub.execute_input": "2025-10-15T15:11:26.204609Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.204443Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.260305Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.259730Z"
     }
    },
    "outputs": [
@@ -193,10 +200,10 @@
       " 2     | 3.67e+04   | 15 %       | 9.00e-03   | 8.21e+04   | 1.70e+04   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 6.27e+03   | 24 %       | 1.20e-03   | 2.32e+04   | 2.55e+03   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 2.55e+02   | 39 %       | 4.07e-05   | 1.12e+03   | 7.96e+01   | 0.00e+00   | 0.00e+00   \n",
-      " 5     | 5.21e-01   | 69 %       | 8.16e-08   | 2.38e+00   | 1.49e-01   | 0.00e+00   | 0.00e+00   \n",
-      " 6     | 2.59e-06   | 100 %      | 7.94e-13   | 1.29e-05   | 1.53e-06   | 0.00e+00   | 0.00e+00   \n",
-      " 7     | 5.94e-10   | 100 %      | 7.78e-17   | 5.64e-10   | 5.61e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 7, Calculation time: 0.02 s, Iterations per second: 292.34\n"
+      " 5     | 5.21e-01   | 69 %       | 8.12e-08   | 2.38e+00   | 1.48e-01   | 0.00e+00   | 0.00e+00   \n",
+      " 6     | 2.73e-06   | 100 %      | 8.20e-13   | 1.31e-05   | 1.53e-06   | 0.00e+00   | 0.00e+00   \n",
+      " 7     | 7.97e-10   | 100 %      | 2.80e-17   | 2.01e-09   | 4.73e-10   | 0.00e+00   | 0.00e+00   \n",
+      "Total iterations: 7, Calculation time: 0.02 s, Iterations per second: 421.45\n"
      ]
     }
    ],
@@ -234,17 +241,17 @@
    "id": "3307ec93",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.649305Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.649071Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.658454Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.657170Z"
+     "iopub.execute_input": "2025-10-15T15:11:26.262601Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.262434Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.266391Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.265845Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.276456922425396"
+       "7.276456922425378"
       ]
      },
      "execution_count": 7,
@@ -260,7 +267,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "959d208b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:26.268838Z",
+     "iopub.status.busy": "2025-10-15T15:11:26.268668Z",
+     "iopub.status.idle": "2025-10-15T15:11:26.318689Z",
+     "shell.execute_reply": "2025-10-15T15:11:26.318007Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -272,9 +286,9 @@
       " 1     | 1.53e+05   | 9 %        | 1.87e-03   | 2.54e+05   | 6.16e+04   | 0.00e+00   | 0.00e+00   \n",
       " 2     | 9.84e+03   | 22 %       | 3.98e-03   | 1.83e+03   | 6.94e+03   | 0.00e+00   | 0.00e+00   \n",
       " 3     | 2.97e+01   | 50 %       | 6.29e-05   | 5.61e+00   | 1.13e+01   | 0.00e+00   | 0.00e+00   \n",
-      " 4     | 4.80e-04   | 100 %      | 1.29e-09   | 2.39e-04   | 1.15e-04   | 0.00e+00   | 0.00e+00   \n",
-      " 5     | 3.34e-10   | 100 %      | 2.56e-16   | 9.49e-10   | 9.25e-10   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 355.34\n"
+      " 4     | 4.81e-04   | 100 %      | 1.29e-09   | 2.43e-04   | 1.17e-04   | 0.00e+00   | 0.00e+00   \n",
+      " 5     | 9.73e-10   | 100 %      | 5.51e-16   | 2.09e-09   | 1.81e-09   | 0.00e+00   | 0.00e+00   \n",
+      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 450.79\n"
      ]
     },
     {
