--- a/notebooks/userdefinedeq_custom_superheat.ipynb
+++ b/notebooks/userdefinedeq_custom_superheat.ipynb
@@ -42,10 +42,10 @@
    "id": "c2f756df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:30.920881Z",
-     "iopub.status.busy": "2025-10-09T18:03:30.920372Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.464148Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.463226Z"
+     "iopub.execute_input": "2025-10-15T15:11:33.849782Z",
+     "iopub.status.busy": "2025-10-15T15:11:33.849523Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.662115Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.661354Z"
     }
    },
    "outputs": [],
@@ -61,10 +61,10 @@
    "id": "db7b48d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.467387Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.467077Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.494220Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.493497Z"
+     "iopub.execute_input": "2025-10-15T15:11:35.664876Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.664590Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.688885Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.688183Z"
     }
    },
    "outputs": [],
@@ -84,10 +84,10 @@
    "id": "12dfc81a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.496922Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.496702Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.512661Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.511821Z"
+     "iopub.execute_input": "2025-10-15T15:11:35.691932Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.691703Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.706966Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.706533Z"
     }
    },
    "outputs": [],
@@ -115,10 +115,10 @@
    "id": "c2722a1b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T18:03:33.514824Z",
-     "iopub.status.busy": "2025-10-09T18:03:33.514622Z",
-     "iopub.status.idle": "2025-10-09T18:03:33.590061Z",
-     "shell.execute_reply": "2025-10-09T18:03:33.588963Z"
+     "iopub.execute_input": "2025-10-15T15:11:35.709602Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.709423Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.782563Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.781883Z"
     }
    },
    "outputs": [
@@ -129,11 +129,11 @@
       "\n",
       " iter  | residual   | progress   | massflow   | pressure   | enthalpy   | fluid      | component  \n",
       "-------+------------+------------+------------+------------+------------+------------+------------\n",
-      " 1     | 4.85e+05   | 3 %        | 1.50e+00   | 0.00e+00   | 2.30e+04   | 0.00e+00   | 0.00e+00   \n",
-      " 2     | 3.45e+04   | 16 %       | 9.26e-02   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
-      " 3     | 3.85e-10   | 100 %      | 1.08e-15   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
+      " 1     | 3.26e+05   | 5 %        | 1.01e+00   | 0.00e+00   | 2.30e+04   | 0.00e+00   | 0.00e+00   \n",
+      " 2     | 2.33e+04   | 18 %       | 6.25e-02   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
+      " 3     | 2.02e-09   | 100 %      | 5.36e-15   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 7.42e-11   | 100 %      | 2.65e-17   | 0.00e+00   | 9.09e-11   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 4, Calculation time: 0.01 s, Iterations per second: 684.00\n"
+      "Total iterations: 4, Calculation time: 0.00 s, Iterations per second: 1548.28\n"
      ]
     }
    ],
@@ -154,7 +154,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "befdc385",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:35.784554Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.784383Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.789977Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.789303Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -177,7 +184,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "8382fa1b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:35.791907Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.791739Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.838416Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.837787Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -191,7 +205,7 @@
       " 3     | 4.98e+00   | 58 %       | 1.21e-05   | 0.00e+00   | 1.67e+00   | 0.00e+00   | 0.00e+00   \n",
       " 4     | 1.31e-05   | 100 %      | 3.02e-11   | 0.00e+00   | 1.22e-06   | 0.00e+00   | 0.00e+00   \n",
       " 5     | 7.28e-11   | 100 %      | 3.35e-16   | 0.00e+00   | 1.05e-09   | 0.00e+00   | 0.00e+00   \n",
-      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 362.98\n"
+      "Total iterations: 5, Calculation time: 0.01 s, Iterations per second: 746.90\n"
      ]
     }
    ],
@@ -225,7 +239,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "34025eb7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-15T15:11:35.840740Z",
+     "iopub.status.busy": "2025-10-15T15:11:35.840472Z",
+     "iopub.status.idle": "2025-10-15T15:11:35.844401Z",
+     "shell.execute_reply": "2025-10-15T15:11:35.843958Z"
+    }
+   },
    "outputs": [
     {
      "data": {
